--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -388,14 +388,12 @@
             <div class="video-viewer large">
               <div class="player">
                 <div class="mediaplayer">
-                  <!-- <div class="ytp-hide-layer"></div> -->
-                  <!-- <video controls preload=metadata width='1280' height='480' poster='media/samplevideo.jpg'>
-                    <source src='/static/images/mango.mp4' type="video/mp4"><source src='/static/images/mango.webm' type="video/webm"><source src='/static/images/mango.ogg' type="video/ogg">
-                      <p>Please use a modern browser to view this video.</p>
-                    </video> -->
-                  <iframe width="100%" height="100%" scrolling="no" title="YouTube video player" src="" frameborder="0" allowfullscreen=""></iframe>
+                    <iframe id="load_article" class="hide" width="100%" height="100%" src="" frameborder="0" scrolling="no"  allowfullscreen=""></iframe>
+                    <audio id="load_audio" class="hide" width="100%" src=""  controls></audio>
+                    <video id="load_video" class="hide" width="100%" height="100%" src="" controls></video>
+                    <img  id="load_image" class="hide" width="100%" height="100%" src="">
                 </div>
-                <div class="loader-display hide">
+                <div class="loader-display show">
                   <div class="upload-progress-bar">
                     <div class="progress">
                       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%; display:none;">
@@ -410,19 +408,11 @@
               </div>
             </div>
             <div class="video-thumbnails large">
+            <div class="prev-video"><img src="/static/images/prev-large.png"></div>
               <ul>
-                <li>
-                  <div class="thumb-progress-bar">
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%; display:none;">
-                      </div>
-                    </div>
-                  </div>
-                  <a href="#" class="active">
-                    <img src="/static/images/latest/project1.png" alt="">
-                  </a>
-                </li>
+
               </ul>
+              <div class="next-video"><img src="/static/images/next-large.png"></div>
             </div>
           </div>
           <div class="video-modal-right">
