--- a/templates/accounts/index.html
+++ b/templates/accounts/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<link href="/static/accounts/css/style.css" rel='stylesheet' type='text/css' />
-<script src="/static/js/jquery-2.1.1.min.js" type="text/javascript"></script>
-<script src="/static/js/jquery.validate.min.js" type="text/javascript"></script>
-<script src="/static/js/_ajaxHelper.js" type="text/javascript"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+    <title>Creathive Login</title>
+    <meta charset="utf-8">
+    <link href="/static/accounts/css/style.css" rel='stylesheet' type='text/css' />
+    <script src="/static/js/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script src="/static/js/jquery.validate.min.js" type="text/javascript"></script>
+    <script src="/static/js/_ajaxHelper.js" type="text/javascript"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 </head>
 <body>
 <div class="main">
@@ -28,8 +29,8 @@
         <div class="clear"> </div>
         <form id="login_form">{% csrf_token %}
            <div class="lable-2">
-                <input type="text" id="login_username" name="login_username" class="text" placeholder="Username" >
-                <input type="password" id="login_password" name="login_password" class="text" placeholder="Password">
+                <div><input type="text" id="login_username" name="login_username" class="text" placeholder="Username" ></div>
+                <div><input type="password" id="login_password" name="login_password" class="text" placeholder="Password"></div>
                 <label id="login_submit-error" class="error"></label>
            </div>
            <div class="submit" >
