Loading user information on profile page when user is logged in. Project thumbnail and basic informaiton upload. Project list loading.
Loading projet info
Updating project info
Deleting project

Loading different catagories
Multiple media deletion using checkbox

Infinite scrolling
Thumbnails added

Media loading in view Modal
1. Saperate tags for differnet medias
2. Media navigation in view Modal
3. Improved navigation buttons

 Separate directories for profile and nested projects and medias

Youtube video uploading

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -390,7 +390,7 @@
                 <div class="mediaplayer">
                     <iframe id="load_article" class="hide" width="100%" height="100%" src="" frameborder="0" scrolling="no"  allowfullscreen=""></iframe>
                     <audio id="load_audio" class="hide" width="100%" src=""  controls></audio>
-                    <video id="load_video" class="hide" width="100%" height="100%" src="" controls></video>
+                    <iframe id="load_video" class="hide" width="100%" height="100%" src="" frameborder="0" allowfullscreen></iframe>
                     <img  id="load_image" class="hide" width="100%" height="100%" src="">
                 </div>
                 <div class="loader-display show">
